fix title visibility on poster

--- a/webui/src/styles/poster.scss
+++ b/webui/src/styles/poster.scss
@@ -64,7 +64,7 @@ $minLargeScreenWidth: 900px;
     }
 
     &.withposter {
-      .title {
+      .r-title {
         display: none;
       }
     }
